# amplifier-bundle-modes

./: CHANGELOG.md  README.md  bundle.md
behaviors/: modes.yaml
context/: modes-instructions.md
docs/: events.md
docs/designs/: default-shortcut-to-name.md
docs/diagrams/: mode-events-taxonomy.dot  mode-lifecycle.dot
docs/plans/: default-shortcut-to-name.md
modes/: careful.md  explore.md  plan.md  review.md
modules/hooks-mode/: pyproject.toml
modules/hooks-mode/amplifier_module_hooks_mode/: __init__.py  events.py
modules/hooks-mode/hooks_mode/: __init__.py
modules/hooks-mode/tests/: test_discovery.py  test_discovery_fixes.py  test_docs_parity.py  test_events_module.py  test_hooks.py  test_lifecycle_diagram.py  test_mention_resolution.py  test_parse_shortcut.py
modules/tool-mode/: README.md  pyproject.toml
modules/tool-mode/amplifier_module_tool_mode/: __init__.py  events.py
modules/tool-mode/tests/: test_events_module.py  test_tool_mode.py
